src/objects/gfsc__Guidance_for_Success__c.object
<CustomObject>
    <description>Values for the different guidance for success implementations.</description>
    <fields>
        <fullName>gfsc__Field_name__c</fullName>
        <description>Field this guidance is dependant on</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gfsc__Object_Name__c</fullName>
        <description>Object this guidance is linked to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gfsc__dismiss__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dismiss this guidance for success</description>
        <label>dismiss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Guidance for Success</label>
    <listViews>
        <fullName>gfsc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidance for Success Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guidance for Success</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>